back-up/ocm-c1/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations/mutators.autoscaling.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  creationTimestamp: "2023-08-11T08:43:08Z"
  generation: 2
  labels:
    app.kubernetes.io/component: kubedb-autoscaler
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.10.0-rc.0
    helm.sh/chart: kubedb-webhook-server-v0.10.0-rc.0
    helm.toolkit.fluxcd.io/name: kubedb
    helm.toolkit.fluxcd.io/namespace: kubeops
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
          f:helm.toolkit.fluxcd.io/name: {}
          f:helm.toolkit.fluxcd.io/namespace: {}
      f:webhooks:
        .: {}
        k:{"name":"elasticsearchautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mariadbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mongodbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mysqlautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"perconaxtradbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"pgbouncerautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"postgresautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"proxysqlautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"redisautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"redissentinelautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: helm-controller
    operation: Update
    time: "2023-08-11T08:43:08Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"elasticsearchautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"mariadbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"mongodbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"mysqlautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"perconaxtradbautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"pgbouncerautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"postgresautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"proxysqlautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"redisautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"redissentinelautoscalerwebhook.mutators.autoscaling.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
    manager: kubedb-webhook-server
    operation: Update
    time: "2023-08-11T08:43:23Z"
  name: mutators.autoscaling.kubedb.com
  resourceVersion: "5183"
  uid: 7a862d6e-796c-4579-a2e3-603615480553
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mongodbautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mongodbautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mongodbautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/elasticsearchautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: elasticsearchautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearchautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mariadbautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mariadbautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mysqlautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mysqlautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mysqlautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/perconaxtradbautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: perconaxtradbautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - perconaxtradbautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/postgresautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: postgresautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - postgresautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/pgbouncerautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: pgbouncerautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - pgbouncerautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/proxysqlautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: proxysqlautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - proxysqlautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/redisautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: redisautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - redisautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEEzTlRrek5Gb1hEVE16TURnd09EQTNOVGt6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVJaCkxsN1dNdUpROVQwYy9tU3FaU29Ud24vRXluQ0pjUEQ4RkZaQVprcTl6NURjTEZzMCtHb1J6d1hYYmdGTW1ud2YKNVk1bDBXZ0g2UjFXL20wY3ppNzBrSGU0ZnJPZWJ4alZtR1FRTFdMQjlSQ3JrTEFTdkduMHBmSkNDUGp3YWhacwpHcFJmNUhOTkN5aF [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/redissentinelautoscalerwebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: redissentinelautoscalerwebhook.mutators.autoscaling.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - autoscaling.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - redissentinelautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
